# -Todo-Full-Stack-Web-Application

./: .gitignore  QUICKSTART.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.claude/commands/: sp.specify.md
backend/: .env.example  README.md  check_db.py  check_users.py  config.py  database.py  main.py  pyproject.toml  requirements-frozen.txt  requirements.txt  run_debug.py  run_server.py  start_backend.py  test_actual_signup.py  test_db_signup.py  test_import.py  test_routes.py  test_signup.py  todo_agent.py  todo_app.db
backend/mcp/: __init__.py  server.py
backend/middleware/: __init__.py  auth.py
backend/models/: __init__.py  conversation.py  task.py  user.py
backend/routes/: __init__.py  auth.py  chat.py  tasks.py
backend/schemas/: __init__.py  chat.py  task.py  user.py
backend/utils/: __init__.py  auth.py  exceptions.py
frontend/: .env.example  middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/auth/: LoginForm.tsx  SignupForm.tsx
frontend/components/chat/: ChatPanel.tsx
frontend/components/tasks/: AddTaskForm.tsx  EmptyState.tsx  TaskItem.tsx  TaskList.tsx
frontend/components/ui/: Button.tsx  Card.tsx  Input.tsx  Toast.tsx
frontend/hooks/: useAuth.ts  useTasks.ts
specs/001-frontend-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-chatbot/: plan.md  spec.md  tasks.md
(+6 files in other folders)
